Add showing the CPU Temperature on the OLED screen.

--- a/Source/WebServer/html/cpu_temp.html
+++ b/Source/WebServer/html/cpu_temp.html
@@ -82,7 +82,7 @@ font-style: bold;
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td align="center" valign="center">
-<h1>Stellaris<small><sup>&reg;</sup></small> LM3S8962 Evaluation Kit</h1>
+<h1> Web I/O Control </h1>
 </td>
 </tr>
 </table>
