--- a/Source/WebServer/html/index.html
+++ b/Source/WebServer/html/index.html
@@ -40,7 +40,7 @@ font-style: bold;
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td align="center" valign="center">
-<h1>Stellaris<small><sup>&reg;</sup></small> LM3S8962 Evaluation Kit</h1>
+<h1> Web I/O Control </h1>
 </td>
 </tr>
 </table>
@@ -85,7 +85,7 @@ font-style: bold;
 <p>
 
 </p>
-<p>Read more about us on the web at <a href="https://github.com/longluo" target="_top">https://github.com/longluo</a>.
+<p>Read more about me on the web at <a href="https://github.com/longluo" target="_top">https://github.com/longluo</a>.
 <p></p>
 <br>
 </td>
