--- a/Source/WebServer/html/mobile.html
+++ b/Source/WebServer/html/mobile.html
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//WAPFORUM//DTD XHTML Mobile 1.0//EN" "http://www.wapforum.org/DTD/xhtml-mobile10.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <!-- Copyright (c) 2009-2012 LongLuo.  All rights reserved. -->
