--- a/Source/WebServer/html/perror.html
+++ b/Source/WebServer/html/perror.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head>
-<!-- Copyright (c) 2009-2010 Texas Instruments Incorporated.  All rights reserved. -->
+<!-- Copyright (c) 2009-2012 LongLuo.  All rights reserved. -->
+<html>
+<head>
 <meta http-equiv="content-type" content="text/html;charset=ISO-8869-1"><title>Form Parameter Error</title>
 
 <style type="text/css">
@@ -37,11 +38,8 @@ font-style: bold;
 <body>
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
 <tr>
-<td align="left"  valign="center">
-<img src="./images/ti_logo.gif">
-</td>
 <td align="center" valign="center">
-<h1>Stellaris<small><sup>&reg;</sup></small> LM3S8962 Evaluation Kit</h1>
+<h1> Web I/O Control </h1>
 </td>
 </tr>
 </table>
@@ -51,19 +49,11 @@ font-style: bold;
 <td align="left" valign="top" width="25%">
 <br>
 <ul>
-<li> <a href="index.htm">About TI</a>
+<li> <a href="index.html">About TI</a>
 <br>
 <br>
 </li>
-<li> <a href="family.htm">About the Stellaris Family</a>
-<br>
-<br>
-</li>
-<li> <a href="block.htm">Block Diagram</a>
-<br>
-<br>
-</li>
-<li> <a href="io_http.htm">I/O Control Demo 1<br>
+<li> <a href="io_http.html">I/O Control Demo 1<br>
 (HTTP Requests)</a>
 <br>
 <br>
@@ -97,9 +87,10 @@ was either missing, invalid or out of range.&nbsp;</p>
 </h1>
 </td>
 <td align="right" valign="center">
-<h3>Copyright &copy; 2009 Texas Instruments Incorporated. All rights reserved.</h3>
+<h3>Copyright &copy; long.luo. All rights reserved.</h3>
 </td>
 </tr>
 </tbody>
 </table>
-</body></html>
+</body>
+</html>
